feat/style: modal CSS + JS, including responsive

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,5 @@
 @import url(../vendor/normalize.css);
 
+@import url(../blocks/form/form.css);
 @import url(../blocks/modal/modal.css);
+@import url(../blocks/modal/_is-open/modal_is-open.css);
