--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -3,6 +3,13 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 2px #000;
+  position: relative;
 
   display: flex;
+  flex-direction: column;
+
+  width: 600px;
+  height: 300px;
+  max-width: 100%;
+  max-height: 100%;
 }
