--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,15 +1,18 @@
+@import url(./__close-btn/modal__close-btn.css);
 @import url(./__container/modal__container.css);
-@import url(./_is-open/modal_is-open.css);
+@import url(./__title/modal__title.css);
 
 .modal {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   background: #0000006b;
   width: 100%;
   height: 100%;
 
-  display: none;
   align-items: center;
   justify-content: center;
+  display: none;
 }
