--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
   background-color: #000;
   max-width: 1200px;
   width: 100%;
+  font-family: 'Inter', Arial, sans-serif;
 
   margin: 0 auto;
   padding-top: 45px;
