--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   background-color: #000;
-  max-width: 1200px;
+  max-width: 882px;
   width: 100%;
   font-family: 'Inter', Arial, sans-serif;
 
@@ -16,3 +16,11 @@
   "content"
   "footer";
 }
+
+@media screen and (max-width: 900px) {
+  .page {
+    max-width: 582px;
+  }
+}
+
+/* TODO confirm that media queries is correct */
