--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -8,3 +8,9 @@
   padding: 0;
   cursor: pointer;
 }
+
+@media screen and (max-width: 900px) {
+  .profile__add-btn {
+    margin-top: 36px;
+  }
+}
