--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -5,3 +5,9 @@
   margin: 16px 0 0 0;
   padding: 0;
 }
+
+@media screen and (max-width: 900px) {
+  .profile__title {
+    margin-top: 14px;
+  }
+}
