--- a/pages/index.css
+++ b/pages/index.css
@@ -8,4 +8,5 @@
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal/_is-open/modal_is-open.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/photos/photos.css);
 @import url(../blocks/profile/profile.css);
