--- a/blocks/modal/__close-btn/modal__close-btn.css
+++ b/blocks/modal/__close-btn/modal__close-btn.css
@@ -10,4 +10,10 @@
   right: -55px;
 
   cursor: pointer;
+
+  transition: opacity 0.3s ease-out;
+}
+
+.modal__close-btn:hover {
+  opacity: 0.8;
 }
