--- a/blocks/form/__save-btn/form__save-btn.css
+++ b/blocks/form/__save-btn/form__save-btn.css
@@ -6,4 +6,10 @@
   background-color: #000;
   color: #fff;
   cursor: pointer;
+
+  transition: opacity 0.3s ease-out;
+}
+
+.form__save-btn:hover {
+  opacity: 0.8;
 }
