--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -13,3 +13,21 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+@media screen and (max-width: 750px) {
+  .modal__container {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .modal__container {
+    width: 282px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .modal__container {
+    width: 180px;
+  }
+}
