--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -7,10 +7,22 @@
   margin: 0;
   padding: 0;
   cursor: pointer;
+
+  transition: opacity 0.3s ease-out;
+}
+
+.profile__add-btn:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 900px) {
   .profile__add-btn {
     margin-top: 36px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile__add-btn {
+    width: 100%;
   }
 }
