--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -11,3 +11,11 @@
     margin-top: 14px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .profile__title {
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+  }
+}
