refactor: removed comments + fixed empty CSS files

--- a/blocks/profile/__add-icon/profile__add-icon.css
+++ b/blocks/profile/__add-icon/profile__add-icon.css
@@ -1,3 +1,9 @@
 .profile__add-icon {
-  /* STUFF HERE */
+  height: 22px;
+}
+
+@media screen and (max-width: 600px) {
+  .profile__add-icon {
+    height: 16px;
+  }
 }
