--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,6 +1,7 @@
 .profile__add-btn {
   background-color: transparent;
   border: 2px solid #fff;
+  border-radius: 2px;
   width: 150px;
   height: 50px;
 
