refactor: added single quotes around Arial font on page CSS

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
   background-color: #000;
   max-width: 882px;
   width: 100%;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: 'Inter', 'Arial', sans-serif;
 
   margin: 0 auto;
   padding-top: 45px;
