refactor: added single quotes to css imports

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,4 +1,4 @@
-@import url(./__input/form__input.css);
-@import url(./__input/_type_name/form__input_type_name.css);
-@import url(./__input/_type_title/form__input_type_title.css);
-@import url(./__save-btn/form__save-btn.css);
+@import url('./__input/form__input.css');
+@import url('./__input/_type_name/form__input_type_name.css');
+@import url('./__input/_type_title/form__input_type_title.css');
+@import url('./__save-btn/form__save-btn.css');
