--- a/blocks/photos/photos.css
+++ b/blocks/photos/photos.css
@@ -1,10 +1,10 @@
-@import url(./__grid/photos__grid.css);
-@import url(./__image/photos__image.css);
-@import url(./__item/photos__item.css);
-@import url(./__item-info/photos__item-info.css);
-@import url(./__love-btn/photos__love-btn.css);
-@import url(./__love-icon/photos__love-icon.css);
-@import url(./__title/photos__title.css);
+@import url('./__grid/photos__grid.css');
+@import url('./__image/photos__image.css');
+@import url('./__item/photos__item.css');
+@import url('./__item-info/photos__item-info.css');
+@import url('./__love-btn/photos__love-btn.css');
+@import url('./__love-icon/photos__love-icon.css');
+@import url('./__title/photos__title.css');
 
 .photos {
   margin: 0;
