--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,12 +1,12 @@
-@import url(./__add-btn/profile__add-btn.css);
-@import url(./__add-icon/profile__add-icon.css);
-@import url(./__avatar/profile__avatar.css);
-@import url(./__data/profile__data.css);
-@import url(./__edit-btn/profile__edit-btn.css);
-@import url(./__edit-icon/profile__edit-icon.css);
-@import url(./__info/profile__info.css);
-@import url(./__name/profile__name.css);
-@import url(./__title/profile__title.css);
+@import url('./__add-btn/profile__add-btn.css');
+@import url('./__add-icon/profile__add-icon.css');
+@import url('./__avatar/profile__avatar.css');
+@import url('./__data/profile__data.css');
+@import url('./__edit-btn/profile__edit-btn.css');
+@import url('./__edit-icon/profile__edit-icon.css');
+@import url('./__info/profile__info.css');
+@import url('./__name/profile__name.css');
+@import url('./__title/profile__title.css');
 
 .profile {
   display: flex;
