--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,12 @@
-@import url(../vendor/normalize.css);
-@import url(../vendor/fonts/fonts.css);
+@import url('../vendor/normalize.css');
+@import url('../vendor/fonts/fonts.css');
 
-@import url(../blocks/content/content.css);
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/form/form.css);
-@import url(../blocks/header/header.css);
-@import url(../blocks/modal/modal.css);
-@import url(../blocks/modal/_is-open/modal_is-open.css);
-@import url(../blocks/page/page.css);
-@import url(../blocks/photos/photos.css);
-@import url(../blocks/profile/profile.css);
+@import url('../blocks/content/content.css');
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/form/form.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/modal/modal.css');
+@import url('../blocks/modal/_is-open/modal_is-open.css');
+@import url('../blocks/page/page.css');
+@import url('../blocks/photos/photos.css');
+@import url('../blocks/profile/profile.css');
