refactor: resized logo in mobile + refactored header padding

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,8 +5,7 @@
   font-family: 'Inter', 'Arial', sans-serif;
 
   margin: 0 auto;
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding: 45px 0 60px 0;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -25,6 +24,8 @@
 
 @media screen and (max-width: 600px) {
   .page {
+    padding-top: 28px;
+    padding-bottom: 36px;
     max-width: 282px;
   }
 }
