--- a/blocks/header/__logo-link/header__logo-link.css
+++ b/blocks/header/__logo-link/header__logo-link.css
@@ -10,3 +10,9 @@
 .header__logo-link:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 600px) {
+  .header__logo-link {
+    width: 126px;
+  }
+}
