--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,8 +3,16 @@
 
 .header {
   width: 100%;
-  height: 74px;
   grid-area: header;
   border: 0;
   border-bottom: 1px solid #545454;
+
+  margin: 0;
+  padding: 0 0 41px 0;
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    padding-bottom: 32px;
+  }
 }
