refactor: profile sizing/positions mods

--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -7,7 +7,7 @@
   border: 1px solid #fff;
   cursor: pointer;
 
-  margin: 0;
+  margin: 26px 0 0 0;
   padding: 0;
 
   transition: opacity 0.3s ease-out;
