--- a/blocks/header/__logo-link/header__logo-link.css
+++ b/blocks/header/__logo-link/header__logo-link.css
@@ -1,7 +1,7 @@
 .header__logo-link {
   width: 173px;
   height: 33px;
-  margin: 0;
+  margin: 10px 0 0 8px;
   padding: 0;
 
   transition: opacity 0.3s ease-out;
