--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -5,6 +5,10 @@
   width: 150px;
   height: 50px;
 
+  background-image: url('../../../images/plus_symbol.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+
   margin: 0;
   padding: 0;
   cursor: pointer;
