--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -1,13 +1,15 @@
 .profile__edit-btn {
-  display: inline-block;
   width: 24px;
   height: 24px;
 
+  background-image: url('../../../images/pencil.svg');
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: transparent;
   border: 1px solid #fff;
   cursor: pointer;
 
-  margin: 26px 0 0 0;
+  margin: 0;
   padding: 0;
 
   transition: opacity 0.3s ease-out;
