--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,13 +4,14 @@
   font-size: 42px;
   line-height: 56px;
 
-  margin: 18px 24px 0 0;
+  margin: 0;
   padding: 0;
 }
 
 @media screen and (max-width: 900px) {
   .profile__name {
     font-size: 32px;
+    margin-top: 14px;
   }
 }
 
