--- a/blocks/photos/__love-btn/photos__love-btn.css
+++ b/blocks/photos/__love-btn/photos__love-btn.css
@@ -1,5 +1,11 @@
 .photos__love-btn {
   display:inline-block;
+  width: 20.76px;
+  height: 18.13px;
+
+  background-image: url('../../../images/heart.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 
   border: none;
   background-color: transparent;
