--- a/blocks/photos/__image/photos__image.css
+++ b/blocks/photos/__image/photos__image.css
@@ -1,12 +1,13 @@
 .photos__image {
-  display: block;
-
   max-width: 388px;
   width: 100%;
   max-height: 282px;
   height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
 
-  object-fit: cover;
-  border-top-left-radius: 10%;
-  border-top-right-radius: 10%;
+  border-radius: 10px 10px 0px 0px;
+
+  margin: 0;
+  padding: 0;
 }
