refactor: set correct font size for footer

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,7 @@
 .footer {
   grid-area: footer;
+  font-size: 18px;
+  line-height: 22px;
   color: #545454;
 
   padding: 66px 0 0 0;
@@ -8,6 +10,8 @@
 
 @media screen and (max-width: 600px) {
   .footer {
+    font-size: 14px;
+    line-height: 17px;
     padding-top: 48px;
   }
 }
