refactor: mod modal per figma sizing + responsive

--- a/blocks/form/__save-btn/form__save-btn.css
+++ b/blocks/form/__save-btn/form__save-btn.css
@@ -1,15 +1,27 @@
 .form__save-btn {
   width: 100%;
-  margin: 48px 0 0 0;
-  padding: 18px 0;
+  height: 50.15px;
+  margin: 40px 0 0 0;
 
   background-color: #000;
+  font-size: 18px;
+  line-height: 22px;
   color: #fff;
   cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   transition: opacity 0.3s ease-out;
 }
 
 .form__save-btn:hover {
   opacity: 0.8;
+}
+
+@media screen and (max-width: 530px) {
+  .form__save-btn {
+    width: 242px;
+  }
 }
