--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -6,4 +6,13 @@
   padding: 0 0 12px 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin: 0;
+
+  font-size: 14px;
+  line-height: 17px;
+}
+
+@media screen and (max-width: 530px) {
+  .form__input {
+    width: 242px;
+  }
 }
