--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -2,14 +2,15 @@
   background: #fff;
   padding: 20px;
   border-radius: 10px;
+  box-sizing: border-box;
   box-shadow: 0 0 2px #000;
   position: relative;
 
   display: flex;
   flex-direction: column;
 
-  width: 600px;
-  height: 300px;
+  width: 430px;
+  height: 330px;
   max-width: 100%;
   max-height: 100%;
 }
@@ -23,11 +24,5 @@
 @media screen and (max-width: 530px) {
   .modal__container {
     width: 282px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .modal__container {
-    width: 180px;
   }
 }
