--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -1,4 +1,17 @@
 .modal__title {
-  margin: 0;
-  padding: 0;
+  width: 330px;
+
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+
+  margin: 0 0 0 15px;
+  padding: 14px 0 0 0;
+}
+
+@media screen and (max-width: 530px) {
+  .modal__title {
+    text-align: center;
+    width: 242px;
+  }
 }
