--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -9,7 +9,7 @@
   border: 1px solid #fff;
   cursor: pointer;
 
-  margin: 0;
+  margin: 0 0 0 24px;
   padding: 0;
 
   transition: opacity 0.3s ease-out;
@@ -17,6 +17,12 @@
 
 .profile__edit-btn:hover {
   opacity: 0.8;
+}
+
+@media screen and (max-width: 900px) {
+  .profile__edit-btn {
+    margin-left: 12px;
+  }
 }
 
 @media screen and (max-width: 600px) {
