--- a/blocks/photos/photos.css
+++ b/blocks/photos/photos.css
@@ -1,3 +1,4 @@
+@import url('./__delete-btn/photos__delete-btn.css');
 @import url('./__grid/photos__grid.css');
 @import url('./__image/photos__image.css');
 @import url('./__item/photos__item.css');
