feat: style toggle functionality + card array state update

--- a/blocks/photos/photos.css
+++ b/blocks/photos/photos.css
@@ -4,6 +4,7 @@
 @import url('./__item/photos__item.css');
 @import url('./__item-info/photos__item-info.css');
 @import url('./__love-btn/photos__love-btn.css');
+@import url('./__love-btn/_liked/photos__love-btn_liked.css');
 @import url('./__title/photos__title.css');
 
 .photos {
