--- a/blocks/photos/__love-btn/photos__love-btn.css
+++ b/blocks/photos/__love-btn/photos__love-btn.css
@@ -3,14 +3,13 @@
   width: 20.76px;
   height: 18.13px;
 
-  background-image: url('../../../images/heart.svg');
+  background-image: url('../../../images/trans_fill_heart.svg');
   background-repeat: no-repeat;
   background-position: center;
 
   border: none;
   background-color: transparent;
   cursor: pointer;
-  fill: red;
 
   margin: 0;
   padding: 0;
