--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,5 +1,7 @@
 @import url('./__close-btn/modal__close-btn.css');
 @import url('./__container/modal__container.css');
+@import url('./__container/_size-image/modal__container_size-image.css');
+@import url('./__image-title/modal__image-title.css');
 @import url('./__title/modal__title.css');
 
 .modal {
