--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -6,15 +6,19 @@
 
 .modal {
   position: fixed;
-  top: 43%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   background: #0000006b;
   width: 100%;
   height: 100%;
 
+  display: flex;
   align-items: center;
   justify-content: center;
-  display: none;
+
+  transition: opacity 2000ms;
+  will-change: opacity;
 }
