--- a/blocks/modal/_is-closed/modal_is-closed.css
+++ b/blocks/modal/_is-closed/modal_is-closed.css
@@ -1,5 +1,12 @@
 /* imported direct to index.css */
+  
 .modal_is-closed {
-  display: none;
-  opacity: 0;
+  animation: show 3s;
+  visibility: hidden;
 }
+
+@keyframes show {
+  0%{opacity:1;}
+  100%{opacity:0;}
+}
+
