--- a/blocks/photos/__title/photos__title.css
+++ b/blocks/photos/__title/photos__title.css
@@ -4,4 +4,8 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
