--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,3 +1,4 @@
+@import url('./__error/form__error.css');
 @import url('./__input/form__input.css');
 @import url('./__save-btn/form__save-btn.css');
 
