--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,9 @@
 @import url('../blocks/content/content.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/form/form.css');
+@import url('../blocks/form/__input/_type_error/form__input_type_error.css');
+@import url('../blocks/form/__error/_visible/form__error_visible.css');
+@import url('../blocks/form/__save-btn/_disabled/form__save-btn_disabled.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/modal/modal.css');
 @import url('../blocks/modal/_is-closed/modal_is-closed.css');
