--- a/blocks/form/__error/form__error.css
+++ b/blocks/form/__error/form__error.css
@@ -1,4 +1,9 @@
-.form_error {
-  display: none;
+.form__error {
+  visibility: hidden;
+  display: inline-block;
+  font-size: 12px;
+  line-height: 15px;
+  margin: 0;
+  padding: 0;
   color: red;
 }
