--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -12,7 +12,12 @@
 }
 
 .form__input:first-child {
-  margin-bottom: 30px;
+  padding-bottom: 0;
+  margin-bottom: 3px;
+}
+
+.form__input:last-of-type {
+  margin-top: 8px;
 }
 
 @media screen and (max-width: 530px) {
