refactor: updated card delete + add methods

--- a/src/blocks/photos/photos.css
+++ b/src/blocks/photos/photos.css
@@ -1,8 +1,11 @@
 @import url('./__delete-btn/photos__delete-btn.css');
+@import url('./__delete-btn/_visible/photos__delete-btn_visible.css');
 @import url('./__grid/photos__grid.css');
 @import url('./__image/photos__image.css');
 @import url('./__item/photos__item.css');
 @import url('./__item-info/photos__item-info.css');
+@import url('./__likes/photos__likes.css');
+@import url('./__likes-container/photos__likes-container.css');
 @import url('./__love-btn/photos__love-btn.css');
 @import url('./__love-btn/_liked/photos__love-btn_liked.css');
 @import url('./__title/photos__title.css');
