--- a/src/blocks/modal/modal.css
+++ b/src/blocks/modal/modal.css
@@ -1,8 +1,10 @@
 @import url('./__close-btn/modal__close-btn.css');
 @import url('./__container/modal__container.css');
 @import url('./__container/_size-image/modal__container_size-image.css');
+@import url('./__container/_type-delete/modal__container_type-delete.css');
 @import url('./__image-title/modal__image-title.css');
 @import url('./__title/modal__title.css');
+@import url('./__confirm-delete-btn/modal__confirm-delete-btn.css');
 
 .modal {
   position: fixed;
