--- a/src/blocks/photos/__delete-btn/photos__delete-btn.css
+++ b/src/blocks/photos/__delete-btn/photos__delete-btn.css
@@ -11,12 +11,12 @@
 
   border: none;
   background-color: transparent;
-  cursor: pointer;
 
   margin: 0;
   padding: 0;
 
   transition: opacity 0.3s ease-out;
+  display: none;
 }
 
 .photos__delete-btn:hover {
