--- a/src/blocks/photos/__love-btn/photos__love-btn.css
+++ b/src/blocks/photos/__love-btn/photos__love-btn.css
@@ -6,12 +6,13 @@
   background-image: url('../../../images/trans_fill_heart.svg');
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 
   border: none;
   background-color: transparent;
   cursor: pointer;
 
-  margin: 0;
+  margin: 0 0 3px 0;
   padding: 0;
 
   transition: opacity 0.3s ease-out;
