--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,14 @@
 .profile__avatar {
+  position: relative;
   width: 120px;
-  border-radius: 50%;
+  height: 120px;
   margin: 0 30px 0 0;
   padding: 0;
-  
-  object-fit: cover;
+  border-radius: 50%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media screen and (max-width: 900px) {
