--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,5 +1,6 @@
 @import url('./__add-btn/profile__add-btn.css');
 @import url('./__avatar/profile__avatar.css');
+@import url('./__avatar-overlay/profile__avatar-overlay.css');
 @import url('./__edit-btn/profile__edit-btn.css');
 @import url('./__info/profile__info.css');
 @import url('./__name/profile__name.css');
