--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,7 @@
 @import url('../blocks/form/__input/_type_error/form__input_type_error.css');
 @import url('../blocks/form/__error/_visible/form__error_visible.css');
 @import url('../blocks/form/__save-btn/_disabled/form__save-btn_disabled.css');
+@import url('../blocks/form/_type/form_type_confirm-delete.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/modal/modal.css');
 @import url('../blocks/modal/_is-open/modal_is-open.css');
